--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -30,6 +30,35 @@
             android:layout_height="wrap_content"
             android:hint="Description"/>
 
+        <!-- Add Image Section -->
+        <LinearLayout
+            android:id="@+id/imagePickerSection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/tvAddImage"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Add Image"
+                android:layout_gravity="center"
+                android:textSize="16sp"/>
+
+            <ImageView
+                android:id="@+id/ivPreview"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:scaleType="centerCrop"
+                 />
+        </LinearLayout>
+
         <Button
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
